# stormblock

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile.iscsi-test  Dockerfile  Dockerfile.aarch64  README.md  boot-iscsi-test.sh  build-release.sh  build.sh  ci-test.sh  install-fedora-iscsi.sh  run-iscsi-test.sh  stormblock.example.toml  test-iscsi.sh
benches/: extent.rs  parity.rs  pdu_parsing.rs  run_fio.sh
benches/fio/: iscsi_4k_randread.fio  iscsi_4k_randwrite.fio  iscsi_sequential.fio  nvmeof_4k_randread.fio  nvmeof_sequential.fio
deploy/m0/: run-m0-baseline.sh
deploy/terragrunt/: root.hcl
deploy/terragrunt/m0-cluster/: terragrunt.hcl
deploy/terragrunt/m0-cluster/.terragrunt-cache/EzIocCfYkm7OvsqT8sj0MVM8Br4/zzrErXivfCDGqan1FvjtMWHfd0A/modules/proxmox-fedora-vm/: .terragrunt-module-manifest  terragrunt.hcl
deploy/terragrunt/m0-cluster/.terragrunt-cache/EzIocCfYkm7OvsqT8sj0MVM8Br4/zzrErXivfCDGqan1FvjtMWHfd0A/modules/proxmox-fedora-vm/templates/: .terragrunt-module-manifest  initiator-user-data.yaml.tftpl  storm-user-data.yaml.tftpl
deploy/terragrunt/ublk-test/.terragrunt-cache/EUUEVDbrSfgLerm7BEDa9F-puI4/zzrErXivfCDGqan1FvjtMWHfd0A/modules/proxmox-fedora-vm/: .terragrunt-module-manifest  terragrunt.hcl
deploy/terragrunt/ublk-test/.terragrunt-cache/EUUEVDbrSfgLerm7BEDa9F-puI4/zzrErXivfCDGqan1FvjtMWHfd0A/modules/proxmox-fedora-vm/templates/: .terragrunt-module-manifest  user-data.yaml.tftpl
docs/: linuxboot-iscsi-spec.md  m0-baseline.md  serve-boot-spec.md  stormblock-boot-server2-spec.md  stormblock-ipxe-boot.md  stormblock-spec.md
examples/: make_boot_artifact.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: iscsi_bhs.rs  iscsi_pdu.rs  iscsi_text_params.rs  nvmeof_common_header.rs  nvmeof_connect_data.rs  nvmeof_pdu.rs
scripts/: build-stormbase-iso.sh  build-stormblock-initramfs.sh
src/: boot.rs  boot_iscsi.rs  lib.rs  main.rs  migrate.rs  stormfs.rs
src/cluster/: config.rs  heartbeat.rs  membership.rs  migration.rs  mod.rs  replication.rs
src/cluster/raft/: mod.rs  network.rs  state.rs  store.rs
src/drive/: container.rs  container_registry.rs  dma.rs  filedev.rs  iscsi_dev.rs  mod.rs  nbd.rs  nvme.rs  pool.rs  sas.rs  slab.rs  slab_registry.rs  ublk.rs  uring_channel.rs  uring_server.rs  vdrive.rs
src/mgmt/: api.rs  config.rs  metrics.rs  mod.rs  ublk_export.rs
src/mgmt/api/: arrays.rs  cluster.rs  drives.rs  exports.rs  luns.rs  mod.rs  pools.rs  slabs.rs  v1.rs  volumes.rs
src/mgmt/ui/: arrays.rs  cluster.rs  dashboard.rs  drives.rs  exports.rs  mod.rs  shared.rs  volumes.rs
src/placement/: cold.rs  mod.rs  topology.rs
src/raid/: journal.rs  mod.rs  parity.rs  rebuild.rs
src/volume/: extent.rs  gem.rs  metadata.rs  mod.rs  snapshot.rs  thin.rs
static/: style.css
systemd/: 95-stormblock-iouring.conf  stormblock-target.service  stormblock-ublk.service
templates/: _toast.html  arrays.html  arrays_table.html  base.html  cluster.html  cluster_nodes_table.html  dashboard.html  drives.html  drives_table.html  exports.html  exports_table.html  volumes.html  volumes_table.html
tests/: boot_iscsi.rs  crash_recovery.rs  external_iscsi.rs  integration_boot_local.rs  integration_iscsi.rs  integration_mgmt_api.rs  integration_nvmeof.rs  integration_raid_degraded.rs  integration_v1_api.rs  integration_volume.rs  iscsi_blockdev.rs
tests/common/: iscsi_initiator.rs  mod.rs  nvmeof_initiator.rs
